Update first game infos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Portfolio</title>
+    <title>Rooftop Detective by Frédéric Baumann</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
     <header class="hero">
         <nav>
             <div class="nav-content">
-                <div class="logo">Your Name</div>
+                <div class="logo">Frédéric Baumann</div>
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
                     <li><a href="#features">Features</a></li>
@@ -22,10 +22,11 @@
             </div>
         </nav>
         <div class="hero-content">
-            <h1>Your Game Title</h1>
-            <p class="subtitle">A brief, exciting tagline about your game</p>
+            <h1>Rooftop Detective</h1>
+            <p class="subtitle">Uncover mysteries in the city's shadows</p>
+            <p class="coming-soon">Coming Soon</p>
             <div class="cta-buttons">
-                <a href="#download" class="btn primary">Download Now</a>
+                <a href="#download" class="btn primary">Play Now</a>
                 <a href="#trailer" class="btn secondary">Watch Trailer</a>
             </div>
         </div>
@@ -36,11 +37,12 @@
             <h2>About the Game</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Share the story and inspiration behind your game. What makes it unique? What problems does it solve or what experiences does it offer?</p>
+                    <p>Step into the shoes of Detective Spade, a supernatural investigator in a city where shadows come alive. After a mysterious encounter with a shady bartender and a fortuitous rescue of a wizard's cat, you've gained extraordinary abilities that will help you solve the city's darkest mysteries.</p>
+                    <p>Navigate the urban landscape from rooftop to rooftop, using your detective skills and newfound powers to uncover the truth behind the shadowy Wesen creatures that threaten the city.</p>
                 </div>
                 <div class="about-image">
                     <!-- Add your game screenshot or artwork here -->
-                    <img src="game-screenshot.jpg" alt="Game Screenshot">
+                    <img src="game-screenshot.jpg" alt="Rooftop Detective Gameplay">
                 </div>
             </div>
         </div>
@@ -51,16 +53,20 @@
             <h2>Game Features</h2>
             <div class="features-grid">
                 <div class="feature-card">
-                    <h3>Feature 1</h3>
-                    <p>Description of your first key feature</p>
+                    <h3>Parkour Movement</h3>
+                    <p>Navigate the city's rooftops with fluid movement mechanics. Run from left to right and jump between buildings with precise controls.</p>
                 </div>
                 <div class="feature-card">
-                    <h3>Feature 2</h3>
-                    <p>Description of your second key feature</p>
+                    <h3>Supernatural Powers</h3>
+                    <p>Utilize magical abilities including floating and time manipulation. But be careful - these powers are limited and must be used strategically.</p>
                 </div>
                 <div class="feature-card">
-                    <h3>Feature 3</h3>
-                    <p>Description of your third key feature</p>
+                    <h3>Puzzle Combat</h3>
+                    <p>Face off against intelligent Wesen creatures by solving letter-based puzzles. One wrong move could be your last.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Noir Atmosphere</h3>
+                    <p>Immerse yourself in a dark, mysterious city where every shadow could hide a clue or a threat.</p>
                 </div>
             </div>
         </div>
@@ -79,7 +85,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Frédéric Baumann. All rights reserved.</p>
         </div>
     </footer>
 </body>
