--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="hero" style="background-image: url('images/tutorial_01.png');">
+    <header class="hero">
         <nav>
             <div class="nav-content">
                 <div class="logo">Frédéric Baumann</div>
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
                     <li><a href="#features">Features</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -41,7 +40,8 @@
                     <p>Navigate the urban landscape from rooftop to rooftop, using your detective skills and newfound powers to uncover the truth behind the shadowy Wesen creatures that threaten the city.</p>
                 </div>
                 <div class="about-image">
-                    <img src="images/tutorial_03.png" alt="Rooftop Detective - Floating Ability">
+                    <!-- Add your game screenshot or artwork here -->
+                    <img src="game-screenshot.jpg" alt="Rooftop Detective Gameplay">
                 </div>
             </div>
         </div>
@@ -66,34 +66,6 @@
                 <div class="feature-card">
                     <h3>Noir Atmosphere</h3>
                     <p>Immerse yourself in a dark, mysterious city where every shadow could hide a clue or a threat.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="gallery" class="gallery">
-        <div class="container">
-            <h2>Game Gallery</h2>
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <img src="images/tutorial_01.png" alt="Tutorial 1 - Movement">
-                    <p>Navigate the city's rooftops</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="images/tutorial_02.png" alt="Tutorial 2 - Jumping">
-                    <p>Jump between buildings</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="images/tutorial_03.png" alt="Tutorial 3 - Floating">
-                    <p>Use supernatural abilities</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="images/tutorial_04.png" alt="Tutorial 4 - Time Control">
-                    <p>Manipulate time</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="images/tutorial_05.png" alt="Tutorial 5 - Combat">
-                    <p>Face the Wesen creatures</p>
                 </div>
             </div>
         </div>
